--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-input/mask": "^2.0.4",
+    "credit-card-input-mask": "^3.0.1",
+    "input-mask": "^1.1.20",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-input-mask": "^2.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
